make the default color to the Airy Blue to solve accessibility color contrasts issues required by accessibility review

--- a/css/colors/default.css
+++ b/css/colors/default.css
@@ -2,12 +2,12 @@
 
 //http://www.cssfontstack.com/oldsites/hexcolortool/
 
-default (gold) : #f4b942
+//default (gold) : #f4b942;
+Default Airy (blue): #0275d8;
 bubblegum (pink): #e9a3c7;
 Pinky: ea579e;
 Plum : 8e6f81
 Ruby (dark red): 9a0201
-Airy (blue): #0275d8;
 pumpkin: ea8147;
 lime (bright green): aed934
 Apple (darke green): 9aac3c
@@ -21,5 +21,5 @@ Black
 
 .card-primary .card-title a:hover, #list-posts article.sticky .card-title a:hover,
 .card-primary .text-muted, #list-posts article.sticky .text-muted{
-  color: #EFEFEF !important; //50% dark
+  //color: #EFEFEF !important; //50% dark
 }
